# Raster-Basics

./: README.md  gulkana_flux_gate_method.ipynb  pyproject.toml  rasterio_basics-package.ipynb  rasterio_basics.ipynb  requirements.txt  wolverine_index_site_method.ipynb
data/: N59W140_2000-2020_dhdt.tif  N59W141_2000-2020_dhdt.tif  N60W140_2000-2020_dhdt.tif  N60W141_2000-2020_dhdt.tif  gulkana.dbf  gulkana.shp  gulkana.shx  malaspina.dbf  malaspina.shp  malaspina.shx
examples/: aletsch_velocity_reprojection.ipynb  flux_gate_method.ipynb  rasterio_basics-package.ipynb  velocity_reprojection.ipynb  vv_reproj_orig.tif  vx_init_clip.tif  vx_reproj_orig.tif  vx_reproj_ptp.tif  vy_init_clip.tif  vy_reproj_orig.tif  vy_reproj_ptp.tif  wolverine_index_site_method.ipynb
examples/.ipynb_checkpoints/: velocity_reprojection-checkpoint.ipynb
raster_basics/: BaseFunctions.py  DataPlots.py  GlacierFunctions.py  NoiseFunctions.py  RasterBasics.py  SmoothingFunctions.py  requirements.txt  setup.py
raster_basics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
raster_basics/raster_basics/: BaseFunctions.py  DataPlots.py  GlacierFunctions.py  RasterBasics.py  __init__.py
